--- a/src/main/resources/templates/mypage/my-following.html
+++ b/src/main/resources/templates/mypage/my-following.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleag.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -146,102 +146,7 @@
                         <div class="css-10zpfwf eq9hiir2"><h1 class="css-16uohvy eq9hiir1">팔로잉</h1>
                             <div class="virtualized-list"
                                  style="padding-top: 0px; padding-bottom: 0px; transform: translateY(0px);">
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/3220925">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/165084712179551530.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">xoxosooz</div>
-                                            <div class="css-ei2twn euanis30">셀프로 오리고 붙이며 사는 집🏡</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/3602461">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167056184658867118.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">백솨니</div>
-                                            <div class="css-ei2twn euanis30">아파트에 색 취향을 입히다. 백솨니 신혼집.</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/1391679">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/163229439646854265.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">아여리네</div>
-                                            <div class="css-ei2twn euanis30">감성을 좋아하는 아여리네집🏠</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/3571966">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/166961198876873319.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">옥냥s2</div>
-                                            <div class="css-ei2twn euanis30">Instagram @rangdelier</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/6131174">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/164017098338356007.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">이엘홈</div>
-                                            <div class="css-ei2twn euanis30">리모델링 전원주택, 멍돌이네 집.</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="" style="">
-                                    <div class="css-1wwhxfz euanis37"><a class="css-1fqwelk euanis35"
-                                                                         href="/users/2181878">
-                                        <div class="css-qmr1ou euanis34"><img class="css-1cqverl euanis33"
-                                                                              src="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=40&amp;h=40&amp;c=c&amp;webp=1"
-                                                                              srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=72&amp;h=72&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=80&amp;h=80&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/users/profile_images/167102274422721706.jpeg?gif=1&amp;w=144&amp;h=144&amp;c=c&amp;webp=1 3x">
-                                        </div>
-                                        <div class="css-1fxvqh3 euanis32">
-                                            <div class="css-19pzwhy euanis31">플로라미</div>
-                                            <div class="css-ei2twn euanis30">세식구가 함께하는 따뜻한 집과 일상기록🧡</div>
-                                        </div>
-                                    </a>
-                                        <button class="_3Z6oR _1zLQC _1XHs9 css-19kmlp8 e43q1md0" type="button">팔로잉
-                                        </button>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -254,5 +159,12 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
+<script src="/js/mypage/my-following.js"></script>
+<script src="/js/mypage/post.js"></script>
+<script th:inline="javascript">
+    let follows = [[${follows}]];
+
+</script>
 <script src="/js/header-footer/header.js"></script>
 </html>
