--- a/src/main/resources/templates/mypage/my-product.html
+++ b/src/main/resources/templates/mypage/my-product.html
@@ -137,14 +137,14 @@
                         <div class="css-vb69r7 e1ivswjr2"></div>
                     </div>
                     <div class="css-1ltj86z e15wafbq0">
-                        <div class="css-1sl5jc2 e1063pje4">
+                        <!--<div class="css-1sl5jc2 e1063pje4">
                             <div class="css-0 e1063pje3"><a class="css-ril2vk e1063pje2"
                                                             href="/users/20617180/questions">내가 구매한 상품</a>
                                 <a class="css-s4qby9 e1063pje2"
                                    href="/users/20617180/questions">내가 찜한 상품</a></div>
                             <div class="css-0 e1063pje1"><a class="_3Z6oR _3AsCW _1BDvx css-1fi7ukg e1063pje0"
                                                             href="/questions">상품 구매하러 가기</a></div>
-                        </div>
+                        </div>-->
                         <div class="css-1w92ebd e1lm7yo61">
                             <div class="virtualized-list row"
                                  style="padding-top: 0px; padding-bottom: 0px; transform: translateY(0px);">
