--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -76,7 +76,7 @@
                                                                                     srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?gif=1&amp;w=240&amp;h=240&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?gif=1&amp;w=320&amp;h=320&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/default_images/avatar.png?gif=1&amp;w=480&amp;h=480&amp;c=c&amp;webp=1 3x">
                                             </div>
                                             <div class="css-oycm3d e18gdfbl1">
-                                                <div class="css-n5l119 etfm1it0">qneoWlro</div>
+                                                <div class="css-n5l119 etfm1it0" th:text="${nickname}"></div>
                                                 <div class="css-oycm3d e1iro1t99">
                                                     <dl class="css-1uy49c8 e1iro1t98">
                                                         <dt class="css-7haicw e1iro1t97">팔로워</dt>
