--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -87,21 +87,6 @@
 <!--    상품목록-->
 <div class="e4cq32f2 css-1obbfpy">
     <button type="button" class="=css-av2k9l" onclick="location.href='/mypage/my-product'">My Coupon</button>
-    <div class="css-14vj981">
-        <div class="css-dlv2hg">
-            <a href="/product/product-list">
-                <div class="css-147wp72">
-                    <strong class="css-1d0kvw3">상품 목록~🍎
-                    </strong>
-                </div>
-            </a>
-        </div>
-        <div class="css-7z0c8w">
-            <a href="/product/product-list">
-                <button type="button" class="css-av2k9l">더보기</button>
-            </a>
-        </div>
-    </div>
     <div class="css-gkfaqp e4cq32f1">
         <div class="e4cq32f2 css-1obbfpy">
             <div class="css-14vj981">
@@ -184,7 +169,7 @@
                             <address class="project-feed__item__writer-wrap">
                                 <a class="project-feed__item__writer" href="/users/5921670?affect_type=ProjectSelfIndex&amp;affect_id=1">
                                     <img class="project-feed__item__writer__image" alt="" src="https://www.wishbeen.co.kr/geo.922951f5cf1908d9.svg">
-                                    <span class="project-feed__item__writer__name">서울</span>
+                                    <span class="project-feed__item__writer__name">서울특별시</span>
                                 </a>
                             </address>
                             <address class="project-feed__item__writer-wrap">
