--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -127,7 +127,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="css-10ewlqi e1q26atk1">좋아요</div>
-                                                <div class="css-2rwq1u e1q26atk0"></div>
+                                                <div class="css-2rwq1u e1q26atk0">10</div>
                                             </a><a class="css-1p9dybm e1q26atk3" href="/user_shopping_pages/coupons">
                                                 <div class="css-zpotx6 e1q26atk2">
                                                     <svg width="24" height="24" viewBox="0 0 24 24"
@@ -137,7 +137,7 @@
                                                     </svg>
                                                 </div>
                                                 <div class="css-10ewlqi e1q26atk1">내 쿠폰</div>
-                                                <div class="css-2rwq1u e1q26atk0"></div>
+                                                <div class="css-2rwq1u e1q26atk0">10</div>
                                             </a></div>
                                         </div>
                                     </div>
