--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -172,7 +172,7 @@
                                                                                    srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
                                                     class="css-1hdjay7 e1ji2o6g2">신청 심사중</span></div>
                                             <span class="css-1j2fjgk e10hes6t1">플로깅</span>
-                                            <div class="css-1ifikfr e1ji2o6g0">제발 제목</div>
+                                            <div class="css-1ifikfr e1ji2o6g0">해운대 모래사장 플로깅</div>
                                         </a></div>
                                         <div class="css-yvus98 e1qiovhc0">
                                             <div class="css-9r5wic et2dhxl0"></div>
@@ -200,7 +200,7 @@
                                                                                    srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
                                                     class="css-1hdjay7 e10hes6t2">참가 심사중</span></div>
                                             <span class="css-1j2fjgk e10hes6t1">수납</span>
-                                            <div class="css-1ifikfr e10hes6t0">제발 제목2</div>
+                                            <div class="css-1ifikfr e10hes6t0">한옥 플로깅 참가</div>
                                         </a></div>
                                         <div class="css-yvus98 e1qiovhc0">
                                             <div class="css-9r5wic e1tzllv70"></div>
@@ -228,7 +228,7 @@
                                                                                    srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
                                                     class="css-1hdjay7 e10hes6t2">사러 가기</span></div>
                                             <span class="css-1j2fjgk e10hes6t1">수납</span>
-                                            <div class="css-1ifikfr e10hes6t0">제발 제목3</div>
+                                            <div class="css-1ifikfr e10hes6t0">한라봉</div>
                                         </a></div>
                                         <div class="css-yvus98 e1qiovhc0">
                                             <div class="css-9r5wic e1tzllv70"></div>
